--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "NTQ4NjYwMjIwMzc3Njk0MjE4.D1IjKQ.oWZg2-ZUp7HViQXSz13Y6k2bmw8",
-	"prefix": "$",
+	"token": "NDc3NDQ3NDg2NzUxODk5NjQ5.Dk8RVg.LcOLadNm5JPhbPsjsJkaO-vrDkM",
+	"prefix": "!",
 	"ytApiKey": "AIzaSyAdORXg7UZUo7sePv97JyoDqtQVi3Ll0b8"
 }
